fix: force bash

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -32,6 +32,7 @@ jobs:
           cat example/ios/.xcode.env.local
 
       - name: Generate
+        shell: bash
         run: |
           # Disabling NEON fixes linker error, see
           # https://github.com/unomed-dev/react-native-matrix-sdk/issues/12
