--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,6 +29,7 @@ jobs:
         run: cargo install cargo-ndk
 
       - name: Generate
+        shell: bash
         run: |
           yarn generate:android
           # Free up space for subsequent steps
