--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ubrn:ios:build": "CARGO_FEATURE_NO_NEON=1 ubrn build ios --config ubrn.yaml",
     "ubrn:ios:build:release": "yarn ubrn:ios:build --release",
     "ubrn:ios:generate": "ubrn generate all --config ubrn.yaml build/RnMatrixRustSdk.xcframework/ios-arm64/libmatrix_sdk_ffi.a && del-cli build/RnMatrixRustSdk.xcframework/ios-arm64/Headers build/RnMatrixRustSdk.xcframework/ios-arm64_x86_64-simulator/Headers swift && mkdir build/RnMatrixRustSdk.xcframework/ios-arm64/Headers build/RnMatrixRustSdk.xcframework/ios-arm64_x86_64-simulator/Headers swift && ( cd rust_modules/matrix-rust-sdk && cargo xtask swift generate-bindings --library-path ../../build/RnMatrixRustSdk.xcframework/ios-arm64/libmatrix_sdk_ffi.a --header-directory ../../build/RnMatrixRustSdk.xcframework/ios-arm64/Headers --swift-directory ../../swift ) && cp -r build/RnMatrixRustSdk.xcframework/ios-arm64/Headers build/RnMatrixRustSdk.xcframework/ios-arm64_x86_64-simulator && (cd example/ios && pod install)",
-    "ubrn:checkout": "ubrn checkout --config ubrn.yaml && ( cd rust_modules/matrix-rust-sdk && git apply ../../swift.rs.patch )",
+    "ubrn:checkout": "( path-exists rust_modules/matrix-rust-sdk && cd rust_modules/matrix-rust-sdk && git reset --hard HEAD ) && ubrn checkout --config ubrn.yaml && ( cd rust_modules/matrix-rust-sdk && git apply ../../swift.rs.patch )",
     "ubrn:clean": "del-cli cpp android/src/main/java ios \"src/Native*\" src/generated \"src/index.ts*\"",
     "generate": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android:build && yarn ubrn:ios:build && yarn ubrn:ios:generate",
     "generate:android": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android:build --and-generate",
@@ -90,6 +90,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
+    "path-exists-cli": "^2.0.0",
     "prettier": "^3.0.3",
     "react": "18.3.1",
     "react-native": "0.76.1",
