feat: include native Swift bindings (#21)

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "*.podspec",
     "build",
     "react-native.config.js",
+    "swift",
     "!ios/build",
     "!android/build",
     "!android/gradle",
@@ -42,8 +43,8 @@
     "ubrn:android:build:release": "yarn ubrn:android:build --release",
     "ubrn:ios:build": "CARGO_FEATURE_NO_NEON=1 ubrn build ios --config ubrn.yaml",
     "ubrn:ios:build:release": "yarn ubrn:ios:build --release",
-    "ubrn:ios:generate": "ubrn generate all --config ubrn.yaml build/RnMatrixRustSdk.xcframework/ios-arm64/libmatrix_sdk_ffi.a && (cd example/ios && pod install)",
-    "ubrn:checkout": "ubrn checkout --config ubrn.yaml",
+    "ubrn:ios:generate": "ubrn generate all --config ubrn.yaml build/RnMatrixRustSdk.xcframework/ios-arm64/libmatrix_sdk_ffi.a && del-cli build/RnMatrixRustSdk.xcframework/ios-arm64/Headers build/RnMatrixRustSdk.xcframework/ios-arm64_x86_64-simulator/Headers swift && mkdir build/RnMatrixRustSdk.xcframework/ios-arm64/Headers build/RnMatrixRustSdk.xcframework/ios-arm64_x86_64-simulator/Headers swift && ( cd rust_modules/matrix-rust-sdk && cargo xtask swift generate-bindings --library-path ../../build/RnMatrixRustSdk.xcframework/ios-arm64/libmatrix_sdk_ffi.a --header-directory ../../build/RnMatrixRustSdk.xcframework/ios-arm64/Headers --swift-directory ../../swift ) && cp -r build/RnMatrixRustSdk.xcframework/ios-arm64/Headers build/RnMatrixRustSdk.xcframework/ios-arm64_x86_64-simulator && (cd example/ios && pod install)",
+    "ubrn:checkout": "( test -d rust_modules/matrix-rust-sdk && git -C rust_modules/matrix-rust-sdk reset --hard HEAD ); ubrn checkout --config ubrn.yaml && ( cd rust_modules/matrix-rust-sdk && git apply ../../swift.rs.patch )",
     "ubrn:clean": "del-cli cpp android/src/main/java ios \"src/Native*\" src/generated \"src/index.ts*\"",
     "generate": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android:build && yarn ubrn:ios:build && yarn ubrn:ios:generate",
     "generate:android": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android:build --and-generate",
