--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,6 +21,7 @@ jobs:
         uses: ./.github/actions/generate
         with:
           platform: android
+          release: false
 
       - name: Cache turborepo for Android
         uses: actions/cache@v4
