chore: zip and upload files

--- a/.github/actions/generate/action.yml
+++ b/.github/actions/generate/action.yml
@@ -46,7 +46,7 @@ runs:
           PLATFORM: ${{ inputs.platform == 'android' && 'android' || 'ios' }}
           SUFFIX: ${{ inputs.release == 'true' && ':release' || '' }}
         run:
-          yarn "generate:$PLATFORM$SUFFIX"
+          yarn generate:$PLATFORM$SUFFIX
 
       - name: Free space
         shell: bash
