--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,4 +1,4 @@
-name: iOS
+name: iOS (Build)
 on:
   push:
     branches:
@@ -13,6 +13,7 @@ jobs:
     runs-on: macos-14
     env:
       TURBO_CACHE_DIR: .turbo/ios
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
