fix: fix diff and try release mode

--- a/.github/actions/generate/action.yml
+++ b/.github/actions/generate/action.yml
@@ -54,8 +54,10 @@ runs:
 
       - name: Check if repository is dirty
         shell: bash
+        env:
+          EXCLUDE: ${{ inputs.platform == 'android' && 'ios' || 'android' }}
         run: |
-          if [[ -n "$(git status --porcelain)" ]]; then
+          if [[ -n "$(git status --porcelain | grep -v ". $EXCLUDE")" ]]; then
             >&2 echo "Found unexpected changes in repository after generating"
             git status --short
             exit 1
