--- a/.github/actions/generate/action.yml
+++ b/.github/actions/generate/action.yml
@@ -60,5 +60,6 @@ runs:
           if [[ -n "$(git status --porcelain | grep -v ". $EXCLUDE")" ]]; then
             >&2 echo "Found unexpected changes in repository after generating"
             git status --short
+            git diff
             exit 1
           fi
