--- a/.github/actions/generate/action.yml
+++ b/.github/actions/generate/action.yml
@@ -32,6 +32,12 @@ runs:
         shell: bash
         run: cargo install cargo-ndk
 
+      - name: Install clang-format
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install clang-format
+
       - name: Write .xcode.env.local
         if: ${{ inputs.platform == 'ios' }}
         shell: bash
