--- a/.github/actions/generate/action.yml
+++ b/.github/actions/generate/action.yml
@@ -35,8 +35,8 @@ runs:
       - name: Install clang-format
         shell: bash
         run: |
-          sudo apt-get update
-          sudo apt-get -y install clang-format
+          sudo apt update
+          sudo apt install clang-format
 
       - name: Write .xcode.env.local
         if: ${{ inputs.platform == 'ios' }}
