--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,49 +1,45 @@
-# name: Build (Release)
-# on:
-#   # TODO: remove
-#   pull_request:
-#     branches:
-#       - main
-#   workflow_dispatch:
+name: Build (Release)
+on:
+  workflow_dispatch:
 
-# jobs:
-#   android:
-#     runs-on: ubuntu-latest
+jobs:
+  android:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-#       - name: Generate
-#         uses: ./.github/actions/generate
-#         with:
-#           platform: android
-#           release: true
+      - name: Generate
+        uses: ./.github/actions/generate
+        with:
+          platform: android
+          release: true
 
-#       - name: Upload artifact
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: android-libs
-#           path: android/**/*.a
-#           if-no-files-found: error
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-libs
+          path: android/**/*.a
+          if-no-files-found: error
 
-#   ios:
-#     runs-on: macos-14
+  ios:
+    runs-on: macos-14
 
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-#       - name: Generate
-#         uses: ./.github/actions/generate
-#         with:
-#           platform: ios
-#           release: true
+      - name: Generate
+        uses: ./.github/actions/generate
+        with:
+          platform: ios
+          release: true
 
-#       - name: Upload artifact
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: xcframework
-#           path: build/*.xcframework
-#           if-no-files-found: error
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: xcframework
+          path: build/*.xcframework
+          if-no-files-found: error
         
