--- a/.github/actions/generate/action.yml
+++ b/.github/actions/generate/action.yml
@@ -1,5 +1,5 @@
-name: Setup
-description: Setup Node.js and install dependencies
+name: Generate
+description: Set up dependencies and regenerate the bindings
 
 inputs:
   platform:
