--- a/.github/actions/setup-js/action.yml
+++ b/.github/actions/setup-js/action.yml
@@ -1,5 +1,5 @@
-name: Setup
-description: Setup Node.js and install dependencies
+name: Setup JS
+description: Set up Node.js and install dependencies
 
 runs:
   using: composite
