--- a/ubrn.yaml
+++ b/ubrn.yaml
@@ -10,8 +10,7 @@ android:
   targets:
     - arm64-v8a
     - armeabi-v7a
-    # x86 should only be needed for ancient devices and excluding this helps us stay below npmjs size limits
-    # - x86
+    - x86
     - x86_64
 ios:
   cargoExtras: []
@@ -19,8 +18,7 @@ ios:
   targets:
     - aarch64-apple-ios
     - aarch64-apple-ios-sim
-    # x86 is dying out and excluding this helps us stay below npmjs size limits
-    # - x86_64-apple-ios
+    - x86_64-apple-ios
   xcodebuildExtras: []
   frameworkName: build/RnMatrixRustSdk
 noOverwrite: []
