chore: use ubrn to generate swift files

--- a/ubrn.yaml
+++ b/ubrn.yaml
@@ -15,6 +15,7 @@ android:
 ios:
   cargoExtras: []
   directory: ios
+  native_bindings_dir: swift
   targets:
     - aarch64-apple-ios
     - aarch64-apple-ios-sim
