--- a/ubrn.yaml
+++ b/ubrn.yaml
@@ -1,8 +1,8 @@
 ---
 crate:
-  repo: https://github.com/matrix-org/matrix-rust-sdk
-  rev: bb573117e102261b46da3f2d6761c4b3f51850a7 # matrix-sdk-0.9.0
-  manifestPath: bindings/matrix-sdk-ffi/Cargo.toml
+  repo: https://github.com/filament-dm/matrix-rust-sdk
+  branch: wasm_mega_pr
+  manifestPath: bindings/matrix-sdk-ffi-web/Cargo.toml
 android:
   cargoExtras: []
   directory: android
@@ -22,6 +22,10 @@ ios:
     # - x86_64-apple-ios
   xcodebuildExtras: []
   frameworkName: build/RnMatrixRustSdk
+web:
+  workspace: true
+  manifestPath: rust_modules/matrix-rust-sdk/bindings/wasm/Cargo.toml
+  runtimeVersion: 0.29.0-0.1
 noOverwrite: []
 turboModule:
   cpp: cpp
