--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
     "typescript": "^5.2.2",
-    "uniffi-bindgen-react-native": "v0.29.3-0"
+    "uniffi-bindgen-react-native": "0.29.3-1"
   },
   "resolutions": {
     "@types/react": "^18.2.44"
