fix: pin cargo-ndk to 3.5.4 since ubrn uses the --no-strip argument removed in cargo-ndk 4.0.0

--- a/.github/actions/generate/action.yml
+++ b/.github/actions/generate/action.yml
@@ -30,7 +30,7 @@ runs:
       - name: Install cargo-ndk
         if: ${{ inputs.platform == 'android' }}
         shell: bash
-        run: cargo install cargo-ndk
+        run: cargo install cargo-ndk --version 3.5.4
 
       - name: Install clang-format
         if: ${{ inputs.platform == 'ios' }}
