--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli -v android/build example/android/build example/android/app/build example/ios/build lib **/.cxx",
     "prepare": "bob build",
-    "release": "release-it"
+    "release": "release-it",
+    "postinstall": "patch-package"
   },
   "keywords": [
     "react-native",
@@ -93,6 +94,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
+    "patch-package": "^8.0.0",
     "prettier": "^3.0.3",
     "react": "18.3.1",
     "react-native": "0.76.9",
