--- a/ubrn.yaml
+++ b/ubrn.yaml
@@ -17,6 +17,7 @@ ios:
   targets:
     - aarch64-apple-ios
     - aarch64-apple-ios-sim
+    - x86_64-apple-ios
   xcodebuildExtras: []
   frameworkName: build/RnMatrixRustSdk
 noOverwrite: []
