--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,11 @@
 {
   "env": {
-    "es6": true
+    "es6": true,
+    "node": true
   },
   "parserOptions": {
-    "sourceType": "module",
+    "ecmaVersion": 2018,
+    "sourceType": "module"
   },
   "plugins": ["prettier"]
 }
