--- a/package.json
+++ b/package.json
@@ -94,13 +94,11 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
-    "patch-package": "^8.0.0",
     "prettier": "^3.0.3",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-builder-bob": "^0.31.0",
     "release-it": "^15.0.0",
-    "tar": "^7.4.3",
     "turbo": "^1.10.7",
     "typescript": "^5.2.2",
     "uniffi-bindgen-react-native": "0.29.3-1"
@@ -225,5 +223,10 @@
     "type": "module-new",
     "languages": "cpp",
     "version": "0.41.2"
+  },
+  "dependencies": {
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
+    "tar": "^7.4.3"
   }
 }
