fix: regenerate bindings in release mode

--- a/package.json
+++ b/package.json
@@ -41,17 +41,19 @@
   "scripts": {
     "ubrn:android:build": "CARGO_TARGET_X86_64_LINUX_ANDROID_RUSTFLAGS=\"-L$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/darwin-x86_64/lib/clang/17/lib/linux\" ubrn build android --config ubrn.yaml --native-bindings",
     "ubrn:android:build:release": "yarn ubrn:android:build --release",
-    "ubrn:ios:build": "CARGO_FEATURE_NO_NEON=1 ubrn build ios --config ubrn.yaml --native-bindings",
+    "ubrn:ios:build": "CARGO_FEATURE_NO_NEON=1 ubrn build ios --config ubrn.yaml --native-bindings --and-generate",
     "ubrn:ios:build:release": "yarn ubrn:ios:build --release",
-    "ubrn:ios:generate": "ubrn generate all --config ubrn.yaml build/RnMatrixRustSdk.xcframework/ios-arm64/libmatrix_sdk_ffi.a && del-cli swift && mv ios/swift swift && (cd example/ios && pod install) && rm -rf src/index.web.ts",
+    "ubrn:ios:post-process": "del-cli swift && mv ios/swift swift && (cd example/ios && pod install) && rm -rf src/index.web.ts",
     "ubrn:checkout": "( test -d rust_modules/matrix-rust-sdk && git -C rust_modules/matrix-rust-sdk reset --hard HEAD ); ubrn checkout --config ubrn.yaml && ( cd rust_modules/matrix-rust-sdk && git apply ../../matrix-rust-sdk.patch )",
     "ubrn:clean": "del-cli -v cpp android/src/main/java ios \"src/Native*\" src/generated \"src/index.ts*\"",
+    "ubrn:clean:android": "del-cli -v android/src/main/java \"src/Native*\" src/generated \"src/index.ts*\"",
+    "ubrn:clean:ios": "del-cli -v ios swift \"src/Native*\" src/generated \"src/index.ts*\"",
     "generate": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android:build && yarn ubrn:ios:build && yarn ubrn:ios:generate",
-    "generate:android": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android:build --and-generate",
-    "generate:ios": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:ios:build && yarn ubrn:ios:generate",
+    "generate:android": "yarn ubrn:clean:android && yarn ubrn:checkout && yarn ubrn:android:build --and-generate",
+    "generate:ios": "yarn ubrn:clean:ios && yarn ubrn:checkout && yarn ubrn:ios:build && yarn ubrn:ios:post-process",
     "generate:release": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android:build:release && yarn ubrn:ios:build:release && yarn ubrn:ios:generate",
-    "generate:release:android": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android:build:release --and-generate",
-    "generate:release:ios": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:ios:build:release && yarn ubrn:ios:generate",
+    "generate:release:android": "yarn ubrn:clean:android && yarn ubrn:checkout && yarn ubrn:android:build:release --and-generate",
+    "generate:release:ios": "yarn ubrn:clean:ios && yarn ubrn:checkout && yarn ubrn:ios:build:release && yarn ubrn:ios:post-process",
     "format": "prettier -w '**/*.{ts,tsx}'",
     "example": "yarn workspace @unomed/react-native-matrix-sdk-example",
     "typecheck": "tsc",
