--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     "ubrn:clean:android": "del-cli -v android/src/main/java \"src/Native*\" src/generated \"src/index.ts*\"",
     "ubrn:clean:ios": "del-cli -v ios swift \"src/Native*\" src/generated \"src/index.ts*\"",
     "generate": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android:build && yarn ubrn:ios:build && yarn ubrn:ios:generate",
-    "generate:android": "yarn ubrn:clean:android && yarn ubrn:checkout && yarn ubrn:android:build --and-generate",
+    "generate:android": "yarn ubrn:clean:android && yarn ubrn:checkout && yarn ubrn:android:build --and-generate && node scripts/sort-uniffi-calls.js",
     "generate:ios": "yarn ubrn:clean:ios && yarn ubrn:checkout && yarn ubrn:ios:build && yarn ubrn:ios:post-process",
     "generate:release": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android:build:release && yarn ubrn:ios:build:release && yarn ubrn:ios:generate",
-    "generate:release:android": "yarn ubrn:clean:android && yarn ubrn:checkout && yarn ubrn:android:build:release --and-generate",
+    "generate:release:android": "yarn ubrn:clean:android && yarn ubrn:checkout && yarn ubrn:android:build:release --and-generate && node scripts/sort-uniffi-calls.js",
     "generate:release:ios": "yarn ubrn:clean:ios && yarn ubrn:checkout && yarn ubrn:ios:build:release && yarn ubrn:ios:post-process",
     "format": "prettier -w '**/*.{ts,tsx}'",
     "example": "yarn workspace @unomed/react-native-matrix-sdk-example",
